[ADD] Completed f-stat test comments.

--- a/index.ipynb
+++ b/index.ipynb
@@ -3545,7 +3545,9 @@
   {
    "cell_type": "markdown",
    "id": "04da4157-a16c-44f6-9e65-cf0746e23135",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "### Confidence Interval of the `Correlation Coefficient`\n",
     "\n",
@@ -3554,7 +3556,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 38,
    "id": "9048958e-d0e1-4c60-bd3f-ea61d9bebdfb",
    "metadata": {},
    "outputs": [
@@ -3604,7 +3606,9 @@
   {
    "cell_type": "markdown",
    "id": "c7e39f2c-ea9f-43e0-9d64-b9005c6f4a69",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "### T-test\n",
     "\n",
@@ -3613,7 +3617,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 39,
    "id": "fe9c3216-4efa-438d-baae-dd475a41fe05",
    "metadata": {},
    "outputs": [
@@ -3650,16 +3654,18 @@
   {
    "cell_type": "markdown",
    "id": "bc6004c1-fc74-4ddc-aa74-efbf09180052",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "### Confidence Interval of the `difference` in the `mean` of spring and other months.\n",
     "\n",
-    "By calculating the confidence intervals of the correlation coefficient, we quantify the precision and reliability of the relationship between budget and revenue, confirming that the observed positive correlation is statistically significant."
+    "By calculating the confidence intervals of the difference in the mean revenue between spring and other months, we quantify the precision and reliability of this difference, confirming that the observed higher average revenue in spring is statistically significant."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 40,
    "id": "7056fdb9-163f-4234-a385-59040acbc408",
    "metadata": {},
    "outputs": [
@@ -3730,7 +3736,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 41,
    "id": "30d51ed4-5c0d-4022-b466-8bde8f022a14",
    "metadata": {},
    "outputs": [
@@ -3768,9 +3774,7 @@
    "source": [
     "### Business Implication\n",
     "\n",
-    "Our `p-value` of `0.002896` concludes that we reject the null hypothesis because our `p-value < 0.05` significance level. Coupled with our `t-stat` score `2.9847`, this shows that the average revenue between films released in spring is significantly higher than the average revenue of other times of the year. **Releasing films in the spring could be financially advantageous.**\n",
-    "\n",
-    "By further calculating the `spring months average revenue` and the `other months average revenue`, we can truly see if the spring months lead to higher. We calculated the `difference in averages` to see how much spring is different from the other months as well as the `confidence interval of difference in averages` to provide additional support in defending that releasing films in spring could lead to financial advantages."
+    "Our ANOVA test concluded that our data with genres resulted in `p-value` of `3.53x10e-7` (a significantly small decimal), which means we `reject` our `null hypothesis` because the `p-value < 0.05 significance level`. Our `f-stat` score `3.3958` shows that there is a `significant difference` in average revenue among different `genres`, which is supported by the p-value as well. **Thus, we can allocate our film budget towards a specific genre that will likely result in greater revenue.** "
    ]
   },
   {
