--- a/index.ipynb
+++ b/index.ipynb
@@ -103,7 +103,9 @@
   {
    "cell_type": "markdown",
    "id": "90c628f9-3a7b-4202-8e39-185ef26dca56",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "# Loading Essentials"
    ]
@@ -3493,7 +3495,9 @@
   {
    "cell_type": "markdown",
    "id": "3c584022-0693-4adf-bbd2-f26cfe2ffacd",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "## 1. Movies with higher budgets tend to have higher box-office revenues."
    ]
@@ -3501,7 +3505,9 @@
   {
    "cell_type": "markdown",
    "id": "efc75dc9-4017-451f-860a-30a6fe6ad98e",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "### Correlation Analysis\n",
     "\n",
@@ -3553,7 +3559,9 @@
   {
    "cell_type": "markdown",
    "id": "32ba8460-f360-42f8-800a-c16619ab79b1",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "## 2. Films released during spring months perform better than other seasons."
    ]
@@ -3561,7 +3569,9 @@
   {
    "cell_type": "markdown",
    "id": "c7e39f2c-ea9f-43e0-9d64-b9005c6f4a69",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "### T-test\n",
     "\n",
@@ -3570,7 +3580,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 38,
    "id": "fe9c3216-4efa-438d-baae-dd475a41fe05",
    "metadata": {},
    "outputs": [
@@ -3607,7 +3617,9 @@
   {
    "cell_type": "markdown",
    "id": "bc6004c1-fc74-4ddc-aa74-efbf09180052",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "### Confidence Interval of the `difference` in the `mean` of spring and other months.\n",
     "\n",
@@ -3616,7 +3628,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 39,
    "id": "7056fdb9-163f-4234-a385-59040acbc408",
    "metadata": {},
    "outputs": [
@@ -3678,7 +3690,9 @@
   {
    "cell_type": "markdown",
    "id": "8e843814-b33d-4381-aead-9d5cefc88487",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "### ANOVA-test\n",
     "\n",
@@ -3687,7 +3701,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 40,
    "id": "30d51ed4-5c0d-4022-b466-8bde8f022a14",
    "metadata": {},
    "outputs": [
@@ -3727,6 +3741,58 @@
     "\n",
     "Our ANOVA test concluded that our data with genres resulted in `p-value` of `3.53x10e-7` (a significantly small decimal), which means we `reject` our `null hypothesis` because the `p-value < 0.05 significance level`. Our `f-stat` score `3.3958` shows that there is a `significant difference` in average revenue among different `genres`, which is supported by the p-value as well. **Thus, we can allocate our film budget towards a specific genre that will likely result in greater revenue.** "
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e329ea68-a0b0-4ef0-bff1-1c79ae144734",
+   "metadata": {},
+   "source": [
+    "# Actionable Insights"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fb9a3b1b-86ac-415f-aa33-00f23562d1c2",
+   "metadata": {},
+   "source": [
+    "### 1. Plan for higher budget production to maximize returns.\n",
+    "\n",
+    "`Insight:` We observed that budget plays a significant role in a film's success, with higher budgets generally correlating with higher revenues. This was supported by the positive trend on the scatterplot and correlation coefficient close to +1.\n",
+    "\n",
+    "`Recommendation:` Plan and allocate for higher budgets on our films to maximize potential revenue."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4592e90f-b9e5-4a6b-9feb-70378ea67472",
+   "metadata": {},
+   "source": [
+    "### 2. Releasing films during the spring months can create more sales.\n",
+    "\n",
+    "`Insight:` We observed statistical significance of films released in the spring months and revenue earned compared to the other times of the year. This was supported by our p-value > 0.05 rejecting the null hypothesis that there's no difference of revenues in the spring months compared to other months.\n",
+    "\n",
+    "`Recommendation:` Plan major releases during these months to capitalize on higher audience and box-office turnout."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "030483ee-35d9-4526-9d26-0543005c6750",
+   "metadata": {},
+   "source": [
+    "#### 3. Focus production towards profitable and compelling genres.\n",
+    "\n",
+    "`Insight:` We observed a significant difference in the average revenues across various genres, giving us direction for production. This was supported by our p-value > 0.05 rejecting the null hypothesis that there's no difference in revenues across different genres, revealing genres with great value for production.\n",
+    "\n",
+    "`Recommendation:` Produce films with aspects of the genre-groups that are proven to drive success."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c30f64bf-b217-475b-bf13-6862e99b428f",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
